🔧 Add permissions update functionality for existing collections
- Introduced logic to update permissions for existing collections in the `create-collections.js` script.
- Added a new script command `fix:permissions` in `package.json` to facilitate permission adjustments.
- Enhanced logging to provide feedback on permission updates and potential errors during the process.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:schema": "node scripts/verify-schema.js",
     "test:submission": "node scripts/test-submission.js",
     "setup:collections": "node scripts/create-collections.js",
+    "fix:permissions": "node scripts/fix-permissions.js",
     "seed:data": "node scripts/seed-data.js"
   },
   "dependencies": {
